Initial project layout.

--- a/uasdm-server/src/main/resources/messages.properties
+++ b/uasdm-server/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
-splash.pagetitle=GeoRegistry
-splash.header=GeoRegistry
-splash.logoalt=GeoRegistry logo
-login.title=GeoRegistry Login
-login.header=GeoRegistry
+splash.pagetitle=UASDM
+splash.header=UASDM
+splash.logoalt=UASDM logo
+login.title=UASDM Login
+login.header=UASDM
 
