Basic setup for Project Management geoprism app

--- a/uasdm-server/src/main/resources/messages.properties
+++ b/uasdm-server/src/main/resources/messages.properties
@@ -4,3 +4,5 @@ splash.logoalt=UASDM logo
 login.title=UASDM Login
 login.header=UASDM
 
+projects.landing=Project Management
+project.management.title=Project Management
