--- a/uasdm-server/src/main/resources/messages.properties
+++ b/uasdm-server/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ login.header=UASDM
 
 projects.landing=PROJECT MANAGEMENT
 project.management.title=Project Management
+
+geoprismLanding.footerMessage=Automated UAV data processing in the cloud 
