changed name of app:

--- a/uasdm-server/src/main/resources/messages.properties
+++ b/uasdm-server/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ splash.logoalt=UASDM logo
 login.title=UASDM Login
 login.header=UASDM
 
-projects.landing=PROJECT MANAGEMENT
-project.management.title=Project Management
+projects.landing=UAS Data Management
+project.management.title=UAS Data Management
 
 geoprismLanding.footerMessage=Automated UAV data processing in the cloud 
